:book: Font tweaking

--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -46,7 +46,7 @@ $yellow: $butter0
 // *** Typography ***
 $family-sans-serif: "Exo 2", "Exo", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $family-monospace: "Fira Code", "Fira Mono", "Consolas", "Monaco", "Inconsolata", monospace
-$family-serif: "Cormarant Garamond", "Cormorant", "Cambria", "Garamond", "Times New Roman", serif
+$family-serif: "Cormorant Garamond", "Cormorant", "Cambria", "Garamond", "Times New Roman", serif
 $size-1: 48px 
 $size-2: 40px 
 $size-3: 28px 
@@ -56,17 +56,17 @@ $size-6: 14px
 $size-7: 11px 
 
 // *** Color Usage ***
-$text: $grey-lighter
+$text: $grey
 $body-background: #000
 $text-light: $grey-darker
-$text-strong: $grey
+$text-strong: $grey-light
 
 // *** Typography Usage ***
 $family-primary: $family-serif
-$size-small: $size-6
-$size-normal: $size-5
-$size-medium: $size-4
-$size-large: $size-3
+$size-small: $size-5
+$size-normal: $size-4
+$size-medium: $size-3
+$size-large: $size-2
 $size-huge: $size-1
 
 @import './pygments.scss'
