:tangerine: Link color fiddling

--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -60,6 +60,10 @@ $text: $grey
 $body-background: #000
 $text-light: $grey-darker
 $text-strong: $grey-light
+$link-hover: $skyBlue1
+$link-hover-background: $skyBlue2
+$link-active: $skyBlue2
+$link-active-background: $skyBlue2
 
 // *** Typography Usage ***
 $family-primary: $family-serif
