--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -137,3 +137,27 @@ h6
   font-family: $family-sans-serif
   color: $butter2
   font-weight: 900
+
+// dl
+dl
+  //display: grid
+  //grid-template-columns: 1fr 3fr
+  //grid-template-rows: auto
+  padding: 0.5rem
+  border-top: 0.5rem $butter0 solid
+  border-bottom: 0.5rem $butter0 solid
+  border-radius: 5px
+
+dt
+  //grid-column-start: 1
+  display: inline-block
+  font-family: $family-sans-serif
+  color: $butter0
+  border-left: 1rem $butter0 solid
+  border-right: 0.5rem $butter0 solid
+  border-radius: 5px 0 0 5px
+  padding: 0 0.5rem
+
+dd
+  //grid-column-start: 2 
+  padding: 0.5rem
