--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -1,31 +1,7 @@
-// *** Tango Color Palette ***
-$butter0:     #fce94f
-$butter1:     #edd400
-$butter2:     #c4a000
-$chameleon0:  #8ae234
-$chameleon1:  #73d216
-$chameleon2:  #4e9a06
-$orange0:     #fcaf3e
-$orange1:     #f57900
-$orange2:     #ce5c00
-$skyBlue0:    #729fcf
-$skyBlue1:    #3465a4
-$skyBlue2:    #204a87
-$plum0:       #ad7fa8
-$plum1:       #75507b
-$plum2:       #5c3566
-$chocolate0:  #e9b96e
-$chocolate1:  #c17d11
-$chocolate2:  #8f5902
-$scarletRed0: #ef2929
-$scarletRed1: #cc0000
-$scarletRed2: #a40000
-$aluminium0:  #eeeeec
-$aluminium1:  #d3d7cf
-$aluminium2:  #babdb6
-$aluminium3:  #888a85
-$aluminium4:  #555753
-$aluminium5:  #2e3436
+@import './lcars-palette.sass'
+@import './tango.sass'
+
+$lcars: $lcars-ancillary
 
 // *** Color overides ***
 $grey-darker: $aluminium5
@@ -75,6 +51,13 @@ $size-huge: $size-1
 
 @import './pygments.scss'
 @import './node_modules/bulma/bulma.sass'
+
+// hr
+hr
+  background: map-get($lcars, elbo)
+  height: 1em
+  border-radius: 0 0 5px 5px
+  break-after: column
 
 // Code, pre
 code, pre
@@ -143,102 +126,172 @@ dl
   //display: grid
   //grid-template-columns: 1fr 3fr
   //grid-template-rows: auto
-  padding: 0.5rem
-  border-top: 0.5rem $butter0 solid
-  border-bottom: 0.5rem $butter0 solid
+  padding: 0.5em
+  border-top: 0.5em map-get($lcars, accent2) solid
+  border-bottom: 1em map-get($lcars, accent2) solid
   border-radius: 5px
 
 dt
   //grid-column-start: 1
   display: inline-block
   font-family: $family-sans-serif
-  color: $butter0
-  border-left: 1rem $butter0 solid
-  border-right: 0.5rem $butter0 solid
+  color: map-get($lcars, accent2)
+  border-left: 1em map-get($lcars, accent2) solid
+  border-right: 0.5em map-get($lcars, accent2) solid
   border-radius: 5px 0 0 5px
   padding: 0 0.5rem
 
 dd
   //grid-column-start: 2 
-  padding: 0.5rem
+  padding: 0.5em
 
 // Outer shell
-body, html
-  width: 100vw
-  height: 100vh
-  max-height: 100vh
-  max-width: 100vw
+html
+  overflow: hidden
 
-#shell
+body
   width: 100vw
   height: 100vh
   max-height: 100vh
   max-width: 100vw
+  overflow: hidden
   display: flex
   flex-direction: column
   padding: 1rem
   overflow: hidden
+  touch-action: none
 
 #hd
-  width: 100%
   margin: 0
-  flex: 0
+  flex: 0 0 auto
   display: flex
   flex-direction: row
   align-items: center
 
-#hd-tlc
+#hd::before
+  content: ''
   flex: 0 0 10rem
-  max-width: 10rem
-  height: 100%
+  width: 10em
+  max-width: 10em
+  align-self: stretch
+  //height: 100%
   border-radius: 5em/3em 0 0 0
-  background: $butter0
+  background: map-get($lcars, elbo)
 
 #gear
-  flex: 0
-  max-height: 2rem
-  padding: 0 0.5rem
+  flex: 0 0 auto
+  //height: 100%
+  max-height: 2em
+  padding: 0 0.5em
 
 #hd-pt
   display: inline-block
-  color: $butter0
-  padding: 0 0.5rem
+  color: map-get($lcars, elbo)
+  padding: 0 0.5em
 
-#hd-fill
-  flex: 1 1 0.5rem
-  height: 100%
-  background: $butter0
+#hd::after
+  content: ''
+  flex: 1 1 0.5em
+  align-self: stretch
+  //height: 100%
+  background: map-get($lcars, elbo)
   border-radius: 0 5px 5px 0
 
 #page-content
-  flex: 1
-  max-height: 85vh
+  flex: 1 1 auto
   display: flex
   flex-direction: row
   margin: 0
+  overflow: hidden
 
 #nav-bar
-  flex: 0 0 10rem
+  flex: 0 0 10em
   order: 1
-  margin-top: -3px
-  padding: 0.65rem
-  background: $butter0
+  display: flex
+  flex-direction: column
+  align-self: stretch
+  //padding: 0.65rem
+
+#nav-bar-interior
+  overflow-y: auto
+  margin-right: 15px
+
+#nav-bar::before
+  content: ''
+  flex: 0 0 1em
+  height: 1em
+  background: map-get($lcars, elbo)
+  border-bottom: 2px black solid
+
+#nav-bar::after
+  content: ''
+  flex: 1 1 0.5em
+  min-height: 0.5em
+  background: map-get($lcars, elbo)
+  border-top: 2px black solid
+
+.lx
+  color: black
+  background: map-get($lcars, accent1)
+  border-bottom: 2px black solid
+  padding: 0.25em 0.5em
+
+.lxcaption
+  font-family: $family-sans-serif
+  font-size: $size-7
+  text-align: right
+  font-variant-caps: titling-caps
+
+#nav-bar .button
+  display: block
+  font-family: $family-sans-serif
+  align-self: stretch
+  text-align: right
+  font-variant-caps: titling-caps
+  margin-bottom: 2px
 
 #co
-  flex: 1
+  align-self: stretch
+  flex: 1 1 auto
   order: 2
-  width: 100%
   border: 15px black solid
   border-radius: 15px
   margin-left: -15px
+  // Force override of Bulma's .content:not(:last-child)
+  margin-bottom: 0px
+  padding: 1em
+  -ms-scroll-translation: vertical-to-horizontal 
+  -webkit-columns: 30em
+  -moz-columns: 30em
+  columns: 30em
+  //touch-action: pan-y
+  overflow-x: auto
+  overflow-y: auto
 
-#co-main
-  max-height: 100%
-  padding: 0.5rem
-  overflow-x: scroll
-  overflow-y: hidden
-  column-width: 30em
-  touch-action: pan-x
+#ft
+  flex: 0 0 auto
+  display: flex
+  flex-direction: row
+  align-items: center
+  font-size: $size-small
 
-#footer
-  flex: 0
+#ft .button
+  align-self: stretch
+  margin: 0 0.5em
+
+#ft::before
+  content: ''
+  flex: 1 1 10em
+  min-width: 10em
+  align-self: stretch
+  //height: 100%
+  border-radius: 0 0 0 5em/3em
+  background: map-get($lcars, elbo)
+
+#ft::after
+  content: ''
+  flex: 0 0 0.5em
+  align-self: stretch
+  //height: 100%
+  background: map-get($lcars, elbo)
+  border-radius: 0 5px 5px 0
