:iphone: Mobile view; polish; reorg

--- a/lcars-palette.sass
+++ b/lcars-palette.sass
@@ -1,4 +1,4 @@
-// *** LCARS Palette – suggested from lcarsdeveloper.com
+// *** LCARS Palette ï¿½ suggested from lcarsdeveloper.com
 $lcars-offline-alert: #ff0000
 $lcars-offline-mute: #330000
 
@@ -6,7 +6,7 @@ $lcars-primary: ( elbo: #f1df6f, unavailable: #3399ff, primary: #99ccff, accent1
 
 $lcars-secondary: ( elbo: #b1957a, unavailable: #5355de, primary: #99ccff, accent1: #ffcc00, accent2: #ffff99 )
 
-$lcars-ancillary: ( elbo: #f1b1af, unavailable: #a27fa5, primary: #a27fa5, accent1: #ffff33, accent2: #e6b0d4 )
+$lcars-ancillary: ( elbo: #f1b1af, unavailable: #a27fa5, primary: #adacd8, accent1: #ffff33, accent2: #e6b0d4 )
 
 $lcars-database: ( elbo: #cc6666, unavailable: #ccccff, primary: #99ccff, accent1: #ff9900, accent2: #ff9900 )
 
