--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -1,297 +1,19 @@
+// *** Palettes ***
 @import './lcars-palette.sass'
 @import './tango.sass'
 
 $lcars: $lcars-ancillary
 
-// *** Color overides ***
-$grey-darker: $aluminium5
-$grey-dark: $aluminium4
-$grey: $aluminium3
-$grey-light: $aluminium2
-$grey-lighter: $aluminium1
-$white: $aluminium0
-
-$blue: $skyBlue0
-$green: $chameleon0
-$orange: $orange0
-$purple: $plum0
-$red: $scarletRed0
-$turquoise: $skyBlue0
-$yellow: $butter0
-
-// *** Typography ***
-$family-sans-serif: "Exo 2", "Exo", "Helvetica Neue", "Helvetica", "Arial", sans-serif
-$family-monospace: "Fira Code", "Fira Mono", "Consolas", "Monaco", "Inconsolata", monospace
-$family-serif: "Cormorant Garamond", "Cormorant", "Cambria", "Garamond", "Times New Roman", serif
-$size-1: 48px 
-$size-2: 40px 
-$size-3: 28px 
-$size-4: 24px 
-$size-5: 18px 
-$size-6: 14px 
-$size-7: 11px 
-
-// *** Color Usage ***
-$text: $grey
-$body-background: #000
-$text-light: $grey-darker
-$text-strong: $grey-light
-$link-hover: $skyBlue1
-$link-hover-background: $skyBlue2
-$link-active: $skyBlue2
-$link-active-background: $skyBlue2
-
-// *** Typography Usage ***
-$family-primary: $family-serif
-$size-small: $size-5
-$size-normal: $size-4
-$size-medium: $size-3
-$size-large: $size-2
-$size-huge: $size-1
-
+// *** Pygments highlight styles (tango) ***
 @import './pygments.scss'
+
+// *** Bulma (vars) ***
+@import './bulma-vars.sass'
+
+// *** Bulma (base library) ***
 @import './node_modules/bulma/bulma.sass'
 
-// hr
-hr
-  background: map-get($lcars, elbo)
-  height: 1em
-  border-radius: 0 0 5px 5px
-  break-after: column
-
-// Code, pre
-code, pre
-  //  padding: 1em;
-  margin-bottom: 1em
-  border-top: 1px $chameleon0 solid
-  border-left: 1px $chameleon2 solid
-  border-bottom: 1px $chameleon0 solid
-  border-right: 1px $chameleon2 solid
-  overflow-x: auto
-  overflow-y: hidden
-  border-radius: 5px
-
-// Typogrify
-body
-  font-variant-ligatures: additional-ligatures
-  font-variant-numeric: oldstyle-nums
-
-.caps
-  text-transform: lowercase
-  font-variant: small-caps
-  //font-variant-caps: titling-caps
-
-.content p, .content blockquote
-  text-align: justify
-
-// Headers
-
-h1
-  font-family: $family-sans-serif
-  color: $scarletRed0
-  font-weight: 200
-
-  &.post-title
-    font-weight: 100
-    text-align: center
-    font-variant-caps: titling-caps
-
-h2
-  font-family: $family-sans-serif
-  color: $orange0
-  font-weight: 300
-
-h3
-  font-family: $family-sans-serif
-  color: $orange0
-  font-weight: 600
-
-h4
-  font-family: $family-sans-serif
-  color: $butter0
-  font-weight: 700
-
-h5
-  font-family: $family-sans-serif
-  color: $butter1
-  font-weight: 800
-
-h6
-  font-family: $family-sans-serif
-  color: $butter2
-  font-weight: 900
-
-// dl
-dl
-  //display: grid
-  //grid-template-columns: 1fr 3fr
-  //grid-template-rows: auto
-  padding: 0.5em
-  border-top: 0.5em map-get($lcars, accent2) solid
-  border-bottom: 1em map-get($lcars, accent2) solid
-  border-radius: 5px
-
-dt
-  //grid-column-start: 1
-  display: inline-block
-  font-family: $family-sans-serif
-  color: map-get($lcars, accent2)
-  border-left: 1em map-get($lcars, accent2) solid
-  border-right: 0.5em map-get($lcars, accent2) solid
-  border-radius: 5px 0 0 5px
-  padding: 0 0.5rem
-
-dd
-  //grid-column-start: 2 
-  padding: 0.5em
-
-// Outer shell
-html
-  overflow: hidden
-
-body
-  width: 100vw
-  height: 100vh
-  max-height: 100vh
-  max-width: 100vw
-  overflow: hidden
-  display: flex
-  flex-direction: column
-  padding: 1rem
-  overflow: hidden
-  touch-action: none
-
-#hd
-  margin: 0
-  flex: 0 0 auto
-  display: flex
-  flex-direction: row
-  align-items: center
-
-#hd::before
-  content: ''
-  flex: 0 0 10rem
-  width: 10em
-  max-width: 10em
-  align-self: stretch
-  //height: 100%
-  border-radius: 5em/3em 0 0 0
-  background: map-get($lcars, elbo)
-
-#gear
-  flex: 0 0 auto
-  //height: 100%
-  max-height: 2em
-  padding: 0 0.5em
-
-#hd-pt
-  display: inline-block
-  color: map-get($lcars, elbo)
-  padding: 0 0.5em
-
-#hd::after
-  content: ''
-  flex: 1 1 0.5em
-  align-self: stretch
-  //height: 100%
-  background: map-get($lcars, elbo)
-  border-radius: 0 5px 5px 0
-
-#page-content
-  flex: 1 1 auto
-  display: flex
-  flex-direction: row
-  margin: 0
-  overflow: hidden
-
-#nav-bar
-  flex: 0 0 10em
-  order: 1
-  display: flex
-  flex-direction: column
-  align-self: stretch
-  //padding: 0.65rem
-
-#nav-bar-interior
-  overflow-y: auto
-  margin-right: 15px
-
-#nav-bar::before
-  content: ''
-  flex: 0 0 1em
-  height: 1em
-  background: map-get($lcars, elbo)
-  border-bottom: 2px black solid
-
-#nav-bar::after
-  content: ''
-  flex: 1 1 0.5em
-  min-height: 0.5em
-  background: map-get($lcars, elbo)
-  border-top: 2px black solid
-
-.lx
-  color: black
-  background: map-get($lcars, accent1)
-  border-bottom: 2px black solid
-  padding: 0.25em 0.5em
-
-.lxcaption
-  font-family: $family-sans-serif
-  font-size: $size-7
-  text-align: right
-  font-variant-caps: titling-caps
-
-#nav-bar .button
-  display: block
-  font-family: $family-sans-serif
-  align-self: stretch
-  text-align: right
-  font-variant-caps: titling-caps
-  margin-bottom: 2px
-
-#co
-  align-self: stretch
-  flex: 1 1 auto
-  order: 2
-  border: 15px black solid
-  border-radius: 15px
-  margin-left: -15px
-  // Force override of Bulma's .content:not(:last-child)
-  margin-bottom: 0px
-  padding: 1em
-  -ms-scroll-translation: vertical-to-horizontal 
-  -webkit-columns: 30em
-  -moz-columns: 30em
-  columns: 30em
-  //touch-action: pan-y
-  overflow-x: auto
-  overflow-y: auto
-
-#ft
-  flex: 0 0 auto
-  display: flex
-  flex-direction: row
-  align-items: center
-  font-size: $size-small
-
-#ft .button
-  align-self: stretch
-  margin: 0 0.5em
-
-#ft::before
-  content: ''
-  flex: 1 1 10em
-  min-width: 10em
-  align-self: stretch
-  //height: 100%
-  border-radius: 0 0 0 5em/3em
-  background: map-get($lcars, elbo)
-
-#ft::after
-  content: ''
-  flex: 0 0 0.5em
-  align-self: stretch
-  //height: 100%
-  background: map-get($lcars, elbo)
-  border-radius: 0 5px 5px 0
+// *** My Stuff *** 
+@import './elements.sass'
+@import './typogrify.sass'
+@import './lcars-shell.sass'
