:diamonds: Tweaks to buttons, blockquote background

--- a/bulma-vars.sass
+++ b/bulma-vars.sass
@@ -8,12 +8,12 @@ $grey-light: $aluminium2
 $grey-lighter: $aluminium1
 $white: $aluminium0
 
-$blue: map-get($lcars, primary) // $skyBlue0
+$blue: map-get($lcars, accent1) // $skyBlue0
 $green: $chameleon0
 $orange: $orange0
 $purple: $plum0
 $red: $scarletRed0
-$turquoise: $skyBlue0
+$turquoise: map-get($lcars, primary) // $skyBlue0
 $yellow: $butter0
 
 // *** Typography ***
@@ -34,8 +34,10 @@ $radius: 0
 // *** Color Usage ***
 $text: $grey
 $body-background: #000
+$background: #000
 $text-light: $grey-darker
 $text-strong: $grey-light
+$link: $skyBlue0
 $link-hover: $skyBlue1
 $link-hover-background: $skyBlue2
 $link-active: $skyBlue2
