--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -1,3 +1,5 @@
+@charset "utf-8"
+
 // *** Palettes ***
 @import './lcars-palette.sass'
 @import './tango.sass'
@@ -11,7 +13,11 @@ $lcars: $lcars-ancillary
 @import './bulma-vars.sass'
 
 // *** Bulma (base library) ***
-@import './node_modules/bulma/bulma.sass'
+@import "./node_modules/bulma/sass/utilities/utilities"
+@import "./node_modules/bulma/sass/base/base"
+@import "./node_modules/bulma/sass/elements/elements"
+@import "./node_modules/bulma/sass/components/components"
+// @import "./node_modules/bulma/sass/layout/layout"
 
 // *** My Stuff *** 
 @import './admonitions.sass'
