Update bulma, sass, color palettes, and tweak some things

--- a/admonitions.sass
+++ b/admonitions.sass
@@ -15,13 +15,13 @@
   margin-bottom: 20px
 
 .admonition.attention
-  @extend .notification.is-primary
+  @extend .is-primary
 
 .admonition.caution, .admonition.warning, .admonition.important
-  @extend .notification.is-warning
+  @extend .is-warning
 
 .admonition.danger, .admonition.error
-  @extend .notification.is-danger
+  @extend .is-danger
 
 .admonition.hint, .admonition.note, .admonition.tip
-  @extend .notification.is-info
+  @extend .is-info
