--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -4,7 +4,7 @@
 @import './lcars-palette.sass'
 @import './tango.sass'
 
-$lcars: $lcars-ancillary
+$lcars: $lcars-lowerdeckspadd
 
 // *** Pygments highlight styles (tango) ***
 @import './pygments.scss'
@@ -13,11 +13,11 @@ $lcars: $lcars-ancillary
 @import './bulma-vars.sass'
 
 // *** Bulma (base library) ***
-@import "./node_modules/bulma/sass/utilities/utilities"
-@import "./node_modules/bulma/sass/base/base"
-@import "./node_modules/bulma/sass/elements/elements"
-@import "./node_modules/bulma/sass/components/components"
-// @import "./node_modules/bulma/sass/layout/layout"
+@import "./node_modules/bulma/sass/utilities/_all"
+@import "./node_modules/bulma/sass/base/_all"
+@import "./node_modules/bulma/sass/elements/_all"
+@import "./node_modules/bulma/sass/components/_all"
+// @import "./node_modules/bulma/sass/layout/_all"
 
 // *** My Stuff *** 
 @import './admonitions.sass'
