--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -81,10 +81,7 @@ body
 
   +tablet
     order: 2
-    -ms-scroll-translation: vertical-to-horizontal 
-    -webkit-columns: 30em
-    -moz-columns: 30em
-    columns: 30em
+    columns: 25rem
     //touch-action: pan-y
     overflow-x: auto
     overflow-y: auto
