--- a/bulma-vars.sass
+++ b/bulma-vars.sass
@@ -1,6 +1,7 @@
 // *** Setup Bulma Variable Overrides ***
 
 // *** Color overides ***
+$black: black
 $grey-darker: $aluminium5
 $grey-dark: $aluminium4
 $grey: $aluminium3
@@ -14,25 +15,19 @@ $orange: $orange0
 $purple: $plum0
 $red: $scarletRed0
 $turquoise: map-get($lcars, primary) // $skyBlue0
+$cyan: $blue
 $yellow: $butter0
 
 // *** Typography ***
 $family-sans-serif: "Exo 2", "Exo", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $family-monospace: "Fira Code", "Fira Mono", "Consolas", "Monaco", "Inconsolata", monospace
 $family-serif: "Cormorant Garamond", "Cormorant", "Cambria", "Garamond", "Times New Roman", serif
-$size-1: 48px 
-$size-2: 40px 
-$size-3: 28px 
-$size-4: 24px 
-$size-5: 18px 
-$size-6: 14px 
-$size-7: 11px 
 
 // *** Miscellaneous ***
 $radius: 0
 
 // *** Color Usage ***
-$text: $grey
+$text: $white
 $body-background: #000
 $background: #000
 $text-light: $grey-darker
@@ -50,8 +45,6 @@ $pre-background: black
 
 // *** Typography Usage ***
 $family-primary: $family-serif
-$size-small: $size-5
-$size-normal: $size-4
-$size-medium: $size-3
-$size-large: $size-2
-$size-huge: $size-1
+
+$scheme-main: $black
+$scheme-invert: $white
