Migrate the outermost parts of the shell to CSS Grid

--- a/bulma-vars.sass
+++ b/bulma-vars.sass
@@ -20,14 +20,14 @@ $yellow: $butter0
 
 // *** Typography ***
 $family-sans-serif: "Exo 2", "Exo", "Helvetica Neue", "Helvetica", "Arial", sans-serif
-$family-monospace: "Fira Code", "Fira Mono", "Consolas", "Monaco", "Inconsolata", monospace
+$family-monospace: "Fira Code", "Fira Mono", "Cascadia Code", "Consolas", "Monaco", "Inconsolata", monospace
 $family-serif: "Cormorant Garamond", "Cormorant", "Cambria", "Garamond", "Times New Roman", serif
 
 // *** Miscellaneous ***
 $radius: 0
 
 // *** Color Usage ***
-$text: $white
+$text: white
 $body-background: #000
 $background: #000
 $text-light: $grey-darker
@@ -45,6 +45,8 @@ $pre-background: black
 
 // *** Typography Usage ***
 $family-primary: $family-serif
+$body-size: 20px
+$body-min-width: 0
 
 $scheme-main: $black
 $scheme-invert: $white
