Revert to block DL after tablet breakpoints

--- a/elements.sass
+++ b/elements.sass
@@ -84,9 +84,7 @@ dl
   border-radius: 5px
 
   +tablet
-    max-height: 50vh // display: grid won't break across columns
-    overflow-x: auto
-    overflow-y: auto
+    display: block
 
 dt
   grid-column-start: 1
