Add a simple column rule
It's an affordance that adds some "hey there's more to scroll", even if it's not exactly aesthetic

--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -75,6 +75,8 @@ body
 
   +tablet
     columns: 20rem
+    gap: 2em
+    column-rule: 5px map-get($lcars, unavailable) dotted
     height: 100%
     //touch-action: pan-y
     overflow-x: auto
