🎨 Migrate LCARS palette to CSS vars

--- a/bulma-vars.sass
+++ b/bulma-vars.sass
@@ -9,12 +9,12 @@ $grey-light: $aluminium2
 $grey-lighter: $aluminium1
 $white: $aluminium0
 
-$blue: map-get($lcars, accent1) // $skyBlue0
+$blue: var(--lcars-accent1) // $skyBlue0
 $green: $chameleon0
 $orange: $orange0
 $purple: $plum0
 $red: $scarletRed0
-$turquoise: map-get($lcars, primary) // $skyBlue0
+$turquoise: var(--lcars-primary) // $skyBlue0
 $cyan: $blue
 $yellow: $butter0
 
