--- a/lcars-palette.sass
+++ b/lcars-palette.sass
@@ -1,20 +1,57 @@
-// *** LCARS Palettes suggested from lcarsdeveloper.com ***
-
-$lcars-offline-alert: #ff0000
-$lcars-offline-mute: #330000
-
-$lcars-primary: ( elbo: #f1df6f, unavailable: #3399ff, primary: #99ccff, accent1: #ffff33, accent2: #ffffcc )
-
-$lcars-secondary: ( elbo: #b1957a, unavailable: #5355de, primary: #99ccff, accent1: #ffcc00, accent2: #ffff99 )
-
-$lcars-ancillary: ( elbo: #f1b1af, unavailable: #a27fa5, primary: #adacd8, accent1: #ffff33, accent2: #e6b0d4 )
-
-$lcars-database: ( elbo: #cc6666, unavailable: #ccccff, primary: #99ccff, accent1: #ff9900, accent2: #ff9900 )
-
-$lcars-redalert: ( elbo: #ff0000, unavailable: #ff0000, primary: #ff0000, accent1: #ff0000, accent2: #ff0000 )
-
 // *** LCARS Palettes suggested from thelcars.com ***
 
-$lcars-lowerdecks: ( elbo: #ff4400, unavailable: #ffaa44, primary: #ff7700, accent1: #ffcc99, accent2: #ffeecc )
+:root
+    // General colors inspired by lcarsdeveloper.com
+    --lcars-offline-alert: #f00
+    --lcars-offline-mute: #300
+    // Lower Decks inspired colors via thelcars.com
+    --lcars-elbo: #ff4400
+    --lcars-unavailable: #ffaa44
+    --lcars-primary: #ff7700
+    --lcars-accent1: #ffcc99
+    --lcars-accent2: #ffeecc
 
-$lcars-lowerdeckspadd: ( elbo: #5588ee, unavailable: #344470, primary: #88ffff, accent1: #7799dd, accent2: #99ccff )
+// Lower Decks inspired PADD colors via thelcars.com
+.padd
+    --lcars-elbo: #5588ee
+    --lcars-unavailable: #344470
+    --lcars-primary: #88ffff
+    --lcars-accent1: #7799dd
+    --lcars-accent2: #99ccff
+
+// *** LCARS Palettes suggested from lcarsdeveloper.com ***
+
+.tngprimary
+    --lcars-elbo: #f1df6f
+    --lcars-unavailable: #3399ff
+    --lcars-primary: #99ccff
+    --lcars-accent1: #ffff33
+    --lcars-accent2: #ffffcc
+
+.tngsecondary
+    --lcars-elbo: #b1957a
+    --lcars-unavailable: #5355de
+    --lcars-primary: #99ccff
+    --lcars-accent1: #ffcc00
+    --lcars-accent2: #ffff99
+
+.tngancillary
+    --lcars-elbo: #f1b1af
+    --lcars-unavailable: #a27fa5
+    --lcars-primary: #adacd8
+    --lcars-accent1: #ffff33
+    --lcars-accent2: #e6b0d4
+
+.tngdatabase
+    --lcars-elbo: #cc6666
+    --lcars-unavailable: #ccccff
+    --lcars-primary: #99ccff
+    --lcars-accent1: #ff9900
+    --lcars-accent2: #ff9900
+
+.redalert
+    --lcars-elbo: #ff0000
+    --lcars-unavailable: #ff0000
+    --lcars-primary: #ff0000
+    --lcars-accent1: #ff0000
+    --lcars-accent2: #ff0000
