--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -17,9 +17,9 @@ body
     max-width: 100vw
     overflow: hidden
     touch-action: none
-    grid-template-columns: 10em 1fr
-    grid-template-rows: auto 1fr auto
-    grid-template-areas: 'hd hd' 'nav co' 'ft ft'
+    grid-template-columns: 10em 15px 15px 1fr
+    grid-template-rows: auto 15px 15px 1fr 15px 15px auto
+    grid-template-areas: 'lb1 lb1 lb1 hd' 'lb1 lb1 lb1 .' 'lb2 lb2 lb3 .' 'nav . . co' 'lb5 lb5 lb6 .' 'lb4 lb4 lb4 .' 'lb4 lb4 lb4 ft'
 
 // *** Header ***
 #hd
@@ -39,10 +39,7 @@ body
   background: var(--lcars-elbo)
 
   +tablet
-    flex: 0 0 10em
-    width: 10em
-    max-width: 10em
-    border-radius: 5em/3em 0 0 0
+    display: none
 
 #gear
   flex: 0 0 auto
@@ -66,9 +63,6 @@ body
 // *** Middle ***
 #co
   grid-area: co
-  border: 15px black solid
-  border-radius: 15px
-  margin-left: -15px
   // Force override of Bulma's .content:not(:last-child)
   margin-bottom: 0px
   padding: 1em
@@ -91,7 +85,6 @@ body
 #nav-bar-interior
   +tablet
     overflow-y: auto
-    margin-right: 15px
 
 #nav-bar::before
   content: ''
@@ -169,11 +162,10 @@ body
   background: var(--lcars-elbo)
 
   +tablet
-    flex: 1 1 10em
-    min-width: 10em
+    flex: 1 1 auto
+    border-radius: 0
     border-bottom: 0
     border-right: 2px black solid
-    border-radius: 0 0 0 5em/3em
 
 #ft::after
   content: ''
@@ -197,3 +189,63 @@ body
   +tablet
     border-bottom: 0
     border-right: 2px black solid 
+
+// *** Elbo pieces (lego bricks) ***
+#lb1
+  grid-area: lb1
+  
+  +tablet
+    display: flex
+    align-self: stretch
+    background: var(--lcars-elbo)
+    border-radius: 5em/3em 0 0 
+
+#lb2
+  grid-area: lb2
+
+  +tablet
+    display: flex
+    align-self: stretch
+    background: var(--lcars-elbo)
+
+#lb3
+  grid-area: lb3
+
+  +tablet
+    display: block
+    position: relative
+    height: 30px
+    width: 30px
+    top: -15px
+    left: -15px
+    background-color: black
+    border-radius: 15px 0 0 0
+
+#lb4
+  grid-area: lb4
+
+  +tablet
+    display: flex
+    align-self: stretch
+    background: var(--lcars-elbo)
+    border-radius: 0 0 0 5em/3em
+
+#lb5
+  grid-area: lb5
+
+  +tablet
+    display: flex
+    align-self: stretch
+    background: var(--lcars-elbo)
+
+#lb6
+  grid-area: lb6
+
+  +tablet
+    display: block
+    position: relative
+    height: 30px
+    width: 30px
+    left: -15px
+    background-color: black
+    border-radius: 0 0 0 15px
