💄 Tweak the color of column rule

--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -70,7 +70,7 @@ body
   +tablet
     columns: 20rem
     gap: 2em
-    column-rule: 5px var(--lcars-unavailable) dotted
+    column-rule: 5px var(--lcars-offline-mute) dotted
     height: 100%
     //touch-action: pan-y
     overflow-x: auto
