Fix ligature warning

--- a/typogrify.sass
+++ b/typogrify.sass
@@ -1,7 +1,7 @@
 // *** Typogrify ***
 
 body
-  font-variant-ligatures: additional-ligatures
+  font-variant-ligatures: discretionary-ligatures
   font-variant-numeric: oldstyle-nums
 
 .caps
