--- a/elements.sass
+++ b/elements.sass
@@ -30,46 +30,47 @@ pre
 
 // *** Headers ***
 
-h1
-  break-before: column
-  font-family: $family-sans-serif
-  color: $scarletRed0
-  font-weight: 200
+.content
+  h1
+    break-before: column
+    font-family: $family-sans-serif
+    color: var(--lcars-elbo)
+    font-weight: 200
 
-  &.post-title
-    font-weight: 100
-    text-align: center
-    font-variant-caps: titling-caps
+    &.post-title
+      font-weight: 100
+      text-align: center
+      font-variant-caps: titling-caps
 
-h2
-  break-before: column
-  font-family: $family-sans-serif
-  color: $orange0
-  font-weight: 300
+  h2
+    break-before: column
+    font-family: $family-sans-serif
+    color: var(--lcars-primary)
+    font-weight: 300
 
-h3
-  break-before: column
-  font-family: $family-sans-serif
-  color: $orange0
-  font-weight: 600
+  h3
+    break-before: column
+    font-family: $family-sans-serif
+    color: var(--lcars-accent1)
+    font-weight: 600
 
-h4
-  break-before: column
-  font-family: $family-sans-serif
-  color: $butter0
-  font-weight: 700
+  h4
+    break-before: column
+    font-family: $family-sans-serif
+    color: var(--lcars-accent2)
+    font-weight: 700
 
-h5
-  break-before: column
-  font-family: $family-sans-serif
-  color: $butter1
-  font-weight: 800
+  h5
+    break-before: column
+    font-family: $family-sans-serif
+    color: var(--lcars-elbo)
+    font-weight: 800
 
-h6
-  break-before: column
-  font-family: $family-sans-serif
-  color: $butter2
-  font-weight: 900
+  h6
+    break-before: column
+    font-family: $family-sans-serif
+    color: var(--lcars-primary)
+    font-weight: 900
 
 // dl
 dl
