📦 Use @fontsource and esbuild for fonts

--- a/lcars-moderne.sass
+++ b/lcars-moderne.sass
@@ -1,5 +1,10 @@
 @charset "utf-8"
 
+// *** Fonts ***
+@import 'node_modules/@fontsource/exo-2/variable.css'
+@import 'node_modules/@fontsource/cormorant-garamond/index.css'
+@import 'node_modules/@fontsource/fira-mono/index.css'
+
 // *** Palettes ***
 @import './lcars-palette.sass'
 @import './tango.sass'
@@ -11,11 +16,10 @@
 @import './bulma-vars.sass'
 
 // *** Bulma (base library) ***
-@import "./node_modules/bulma/sass/utilities/_all"
-@import "./node_modules/bulma/sass/base/_all"
-@import "./node_modules/bulma/sass/elements/_all"
-@import "./node_modules/bulma/sass/components/_all"
-// @import "./node_modules/bulma/sass/layout/_all"
+@import "node_modules/bulma/sass/utilities/_all"
+@import "node_modules/bulma/sass/base/_all"
+@import "node_modules/bulma/sass/elements/_all"
+@import "node_modules/bulma/sass/components/_all"
 
 // *** My Stuff *** 
 @import './admonitions.sass'
