🎪 Fix title font

--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -53,6 +53,7 @@ body
   padding: 0 0.5em
 
 #hd-pt
+  font-family: $family-sans-serif
   display: inline-block
   color: var(--lcars-elbo)
   padding: 0 0.5em
