--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -47,16 +47,18 @@ body
     display: none
 
 #gear
-  flex: 0 0 auto
-  //height: 100%
-  max-height: 2em
-  padding: 0 0.5em
+  flex: 0 0 2em
+  align-self: stretch
+  margin: 0 0.5em
+  background: url('wmgear010-trans.png')
+  background-size: contain
+  background-repeat: no-repeat
 
 #hd-pt
   font-family: $family-sans-serif
   display: inline-block
   color: var(--lcars-elbo)
-  padding: 0 0.5em
+  padding: 0 0.5em 0 0
 
 #hd::after
   content: ''
