--- a/lcars-shell.sass
+++ b/lcars-shell.sass
@@ -95,6 +95,11 @@ body
       gap: 2em
       column-rule: 5px var(--lcars-offline-mute) dotted
 
+.columnar #comments
+  min-height: 0
+  max-height: 100%
+  overflow-y: auto
+
 #nav-bar
   grid-area: nav
   display: flex
